[package]
name = "haiku-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15", features = ["axum-macros"] }
serde = { version = "1.0.143", features = ["serde_derive"] }
tokio = { version = "1.20.1", features = ["full", "tracing"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["tracing", "env-filter", "serde"] }
